--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -10,7 +10,7 @@
         <h2>{% block title %}Add New User{% endblock %}</h2>
         {{ form_widget(form) }}
         {{ form_end(form) }}
-        <a href="{{ path('index') }}">&laquo; Back</a>
+        <a href="{{ path('index') }}">&laquo; Home</a>
     </div>
 </div>
 
