--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -3,6 +3,6 @@
 {% block body %}
 
     <h2>{% block title %}User List{% endblock %}</h2>
-    <a href="{{ path('index') }}">&laquo; Back</a>
+    <a href="{{ path('index') }}">&laquo; Home</a>
 
 {% endblock %}
