--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,17 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>{% block title %}Hi!{% endblock %}</title>
+        <title>{% block title %}User Api Demo{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!-- <link rel="stylesheet" href="http://getbootstrap.com/docs/4.0/examples/sign-in/signin.css" crossorigin="anonymous"> -->
     </head>
     <body>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
+            <div class="container">
+                <a class="navbar-brand" href="{{ path('index') }}" title="User Api Demo">UAD</a>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item {{ app.request.get('_route') == 'userCreate' ? 'active' }}">
+                        <a class="nav-link" href="{{ path('userCreate') }}">Create New User</a>
+                    </li>
+                    <li class="nav-item {{ app.request.get('_route') == 'userList' ? 'active' }}">
+                        <a class="nav-link" href="{{ path('userList') }}">Browse Users</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div class="container">
         {% for label, messages in app.flashes %}
             {% for message in messages %}
-                <div class="alert alert-{{ label }}">
+                <div class="alert alert-{{ label }}" role="alert">
                     {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
             {% endfor %}
         {% endfor %}
