--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,13 +11,19 @@
     <body>
         <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
             <div class="container">
-                <a class="navbar-brand" href="{{ path('index') }}" title="User Api Demo">UAD</a>
+                <a class="navbar-brand" href="{{ path('index') }}" title="User Api Demo">
+                    <img class="d-inline-block align-top" src='data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 640"><path fill="#fff" d="M247.2 68.672c-32.512 24.192-41.248 62.496-39.648 82.88 2.048 24.928 7.104 57.376 7.104 57.376s-10.016 5.44-10.016 27.328c3.488 54.944 21.856 31.232 25.632 55.328 9.088 58.048 29.856 47.712 29.856 79.392 0 52.768-21.76 77.44-89.696 106.688-68.16 29.376-138.432 66.336-138.432 130.336v32h576v-32c0-64-70.304-100.96-138.496-130.304-67.936-29.248-89.632-53.888-89.632-106.688 0-31.68 20.704-21.344 29.824-79.392 3.808-24.096 22.144-0.384 25.696-55.328 0-21.888-10.048-27.328-10.048-27.328s5.056-32.448 7.072-57.376c2.080-26.144-12.736-81.952-73.6-99.072-10.656-10.88-17.856-28.192 14.912-45.568-71.68-3.36-88.352 34.144-126.528 61.728z"></path></svg>'>
+                    UAD
+                </a>
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item {{ app.request.get('_route') == 'userCreate' ? 'active' }}">
-                        <a class="nav-link" href="{{ path('userCreate') }}">Create New User</a>
+                    <li class="nav-item {{ app.request.get('_route') == 'createUser' ? 'active' }}">
+                        <a class="nav-link" href="{{ path('createUser') }}">Create New User</a>
                     </li>
                     <li class="nav-item {{ app.request.get('_route') == 'userList' ? 'active' }}">
                         <a class="nav-link" href="{{ path('userList') }}">Browse Users</a>
+                    </li>
+                    <li class="nav-item {{ app.request.get('_route') == 'apiList' ? 'active' }}">
+                        <a class="nav-link" href="{{ path('apiList') }}">API</a>
                     </li>
                 </ul>
             </div>
