Heroku deploy improvements + updated docs
- post-install scripts were added, the database will be reset every deploy
- creations of .env was moved from composer.json
- the database will be reset every deploy
- listApi "action" was removed

--- a/templates/homepage/default.html.twig
+++ b/templates/homepage/default.html.twig
@@ -2,6 +2,12 @@
 
 {% block body %}
 
-    {{ readme|raw }}
+    <h1 class="text-success">Congratulations!</h1>
+    <p class="lead">
+        You have successfully installed a <span class="badge badge-secondary">user-api-demo</span>.<br>
+        What next? See <a href="https://github.com/jelen07/user-api-demo#installation" target="_blank">project readme</a> and <a href="https://github.com/jelen07/user-api-demo#user-api" target="_blank">User API</a> section.
+    </p>
+
+    {# {{ readme|raw }} #}
 
 {% endblock %}
